tests/invalid/Return_Invalid_3.whiley
function f(bool z) -> void:
    return z
